# ShopAPI_PY33

./: .env  pyproject.toml  requirements.txt
account/: models.py  serializers.py  urls.py  utils.py  views.py
config/: settings.py  urls.py
product/: models.py  serializers.py  urls.py  views.py
